--- a/appconfig.json
+++ b/appconfig.json
@@ -1,5 +1,5 @@
 {
-    "appName": "ArchMatCounter",
+    "appName": "ArchMatCounterIronmad9Beta",
     "description": "Tracks materials as they appear in the chat box.",
     "appUrl": "https://zerogwafa.github.io/ArchMatCounter/",
     "configUrl": "https://zerogwafa.github.io/ArchMatCounter/appconfig.json",
