--- a/appconfig.json
+++ b/appconfig.json
@@ -1,9 +1,9 @@
 {
     "appName": "ArchMatCounterIronmad9Beta",
     "description": "Tracks materials as they appear in the chat box.",
-    "appUrl": "https://zerogwafa.github.io/ArchMatCounter/",
-    "configUrl": "https://zerogwafa.github.io/ArchMatCounter/appconfig.json",
-    "iconUrl": "https://zerogwafa.github.io/ArchMatCounter/images/Archaeology.png",
+    "appUrl": "https://hoppingmad9.github.io/ArchMatCounter/",
+    "configUrl": "https://hoppingmad9.github.io/ArchMatCounter/appconfig.json",
+    "iconUrl": "https://hoppingmad9.github.io/ArchMatCounter/images/Archaeology.png",
     "defaultWidth": 277,
     "defaultHeight": 551,
     "requestHandlers": [],
