different default chatbox

--- a/appconfig.json
+++ b/appconfig.json
@@ -8,5 +8,5 @@
     "defaultHeight": 551,
     "requestHandlers": [],
     "activators": [],
-    "permissions": "pixel,gamestate,overlay"
+    "permissions": "pixel,gamestate,overlay",
 }
